# JanusAgent

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-basis.md  main.py  pyproject.toml  ruff.toml
.agent/: AGENT.md
.agent/context/: project.md
.agent/memory/: decisions.md
.agent/rules/: coding.md  git.md
.agent/skills/code-submit/: SKILL.md
.agent/skills/create-skill-file-EN/: SKILL.md
.agent/skills/create-skill-file-EN/examples/: bad-example.md  good-example.md
.agent/skills/fastgpt-workflow-generator/: LESSONS_LEARNED.md
.agent/skills/local-diff-review/: SKILL.md
.agent/skills/prompt-optimize/: SKILL.md
.agent/skills/software-copyright-writer/: SKILL.md
.omo/run-continuation/: ses_0de0ba8e7ffe7f2M89BsQ600ba.json
.qoder/skills/project-docs-to-html/: SKILL.md  reference.md  template.html
.qoder/skills/weekly-report/: SKILL.md
docs/docker/: docker-basics.md
docs/guides/: gitlab内网代理接入指南.md  ssh-tunnel-h20.ps1
docs/plans/: perception-agent.md  roadmap.html  roadmap.md  todolist.html  todolist.md  verl-learning-plan.md
docs/rfcs/: quant-agent-rfc-001-炒股策略Agent.md
docs/survey/: agent-directory-background.md  量化Agent工程哲学.md
docs/survey/Agentic量化交易/: Agentic量化交易调研.md
docs/survey/llm-wiki/: Karpathy-LLM-Wiki总结.md
docs/survey/opencode学习/: opencode-skill-config.md
docs/survey/perception/: MinerU.md  VLM-wiki.md
docs/survey/prompt最优实践/: 与AI协作的提示词策略-发现你的未知项.md
docs/survey/qoder/: 浏览器工具功能详解.md
harness-protocol/: harness-protocol.md
scripts/: download_model.py  download_model_guide.md
(+187 files in other folders)
